  * enhancement: experimental function SB-EXT:RESTRICT-COMPILER-POLICY
    allows assining a global minimum value to optimization qualities
    (overriding proclamations and declarations).
  * enhancement: closed over variables can be stack-allocated on x86
    and x86-64.
  * performance bug fix: GETHASH and (SETF GETHASH) are once again
    non-consing.
  * bug fix: backtrace construction is now more careful when making
    lisp-objects from pointers on the stack, to avoid creating bogus
    objects that can be seen by the GC.

changes in sbcl-1.0.7 relative to sbcl-1.0.6:
  * MOP improvement: support for user-defined subclasses of
    SB-MOP:SPECIALIZER has been enhanced.  The experimental interface
    function SB-PCL:MAKE-METHOD-SPECIALIZERS-FORM, called as part of
    the expansion of DEFMETHOD, is responsible for generating a form
    which creates a list of specializers when evaluated.  Additional
    functions SB-PCL:[UN]PARSE-SPECIALIZER-USING-CLASS provide
    debugging and introspective support.
  * minor incompatible change: the (unsupported) spinlock interface
    has changed: free spinlock now has the value NIL, and a held spinlock
    has the owning thread as its value.
  * enhancement: WITHOUT-INTERRUPTS now binds ALLOW-WITH-INTERRUPTS and
    WITH-LOCAL-INTERRUPTS as local macros. Refer to documentation string
    for details.
  * enhancement: name of a socket-stream is now "a socket" instead of
    "a constant string".
  * enhancement: SB-POSIX now supports lockf(). (Thanks to Zach Beane.)  
  * enhancement: SB-POSIX now supports getcwd(). (Thanks to Tassilo Horn.)
  * enhancement: SB-INTROSPECT:FUNCTION-ARGLIST shows nicer argument lists
    for generic functions. (Thanks to Tobias C. Rittweiler)
  * optimization: bignum printing speed has been improved by 20-40%
    (depending on the bignum size.)
  * bug fix: WITH-MUTEX and WITH-RECURSIVE-LOCK are now interrupt safe
    on Linux.